# provimedia-mcp

./: CLAUDE.md  Dockerfile  MCP-DOV.md  README.md  SYNCINSTALL.md  mcp_config_updated.json  pyproject.toml  requirements.txt  setup.py
docs/: TESTING.md  USAGE.md
installer/: install.sh
src/mcp-server/chainguard/: config.py  generate_php_builtins.py  handlers.py  validators.py
src/mcp-server/chainguard/data/: php_builtins.json
