# =============================================================================
# CHAINGUARD - Project Configuration
# =============================================================================
# Moderne Python-Projekt-Konfiguration
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainguard"
version = "4.1.0"
description = "High-End optimierte Qualitätskontrolle für Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Chainguard Team", email = "team@chainguard.dev"}
]
keywords = [
    "claude",
    "claude-code",
    "mcp",
    "quality-assurance",
    "validation",
    "ai-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp>=0.9.0",
    "aiofiles>=23.0.0",  # Async I/O für High-End Performance
    "chromadb>=0.4.0,<0.5.0",
    "sentence-transformers>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
full = [
    "pyyaml>=6.0",
    "anthropic>=0.18.0",
]
minimal = [
    # Ohne aiofiles - funktioniert mit sync fallback
    "mcp>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/chainguard"
Documentation = "https://github.com/your-org/chainguard#readme"
Repository = "https://github.com/your-org/chainguard.git"
Issues = "https://github.com/your-org/chainguard/issues"

[project.scripts]
chainguard = "chainguard.cli:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.sh", "*.yaml", "*.yml", "*.md"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
